--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,6 +70,8 @@ ul {
   transition: background-color ease-in .5s;
 }
 
+
+
 /*
   Tags
 */
@@ -95,14 +97,17 @@ main {
 /*
   Classes
 */
-.dark{
-  /* background-color:gray; */
+.dark {
+  --circlecolor: purple;
 }
 
 .light{
-  /* background-color: #f9f9fb; */
+  --circle-color: #ffb100;
 }
 
+.circle{
+  color: var(--circlecolor);
+}
 
 .dark header,
 .dark footer {
@@ -128,11 +133,13 @@ main {
   color: var(--dark);
 }
 
+
 /*
   IDs
 */
 #toggle {
   font-size: 1.52em;
+  justify-content: right;
   margin: 0;
   padding: 0;
   background: transparent;
@@ -140,3 +147,13 @@ main {
   cursor: pointer;
   text-shadow: 0px 0px .5rem var(--light-accent);
 }
+/* 
+.dark.toggle{
+
+} */
+
+/* .dark header,
+#toggle {
+  color: #563d7c;
+} */
+
