--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,8 +70,6 @@ ul {
   transition: background-color ease-in .5s;
 }
 
-
-
 /*
   Tags
 */
@@ -97,17 +95,14 @@ main {
 /*
   Classes
 */
-.dark {
-  --circlecolor: purple;
+.dark{
+  --circle-color: purple;
 }
 
 .light{
   --circle-color: #ffb100;
 }
 
-.circle{
-  color: var(--circle-color);
-}
 
 .dark header,
 .dark footer {
@@ -133,13 +128,11 @@ main {
   color: var(--dark);
 }
 
-
 /*
   IDs
 */
 #toggle {
   font-size: 1.52em;
-  justify-content: right;
   margin: 0;
   padding: 0;
   background: transparent;
@@ -147,13 +140,4 @@ main {
   cursor: pointer;
   text-shadow: 0px 0px .5rem var(--light-accent);
 }
-/* 
-.dark.toggle{
-
-} */
-
-/* .dark header,
-#toggle {
-  color: #563d7c;
-} */
 
